<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="250dp"
    android:minHeight="80dp"
    android:targetCellWidth="4"
    android:targetCellHeight="1"
    android:updatePeriodMillis="0"
    android:initialLayout="@layout/widget_player"
    android:resizeMode="horizontal"
    android:widgetCategory="home_screen"
    android:description="@string/widget_description" />
